[metadata]
version = attr: SimproAPI.__version__
name = SimproAPI
description = Structured way to interface with Simpro
url = https://github.com/Razmo99/SimproAPI
author = razmo99
author_email = lewis.munro@live.com
license = MIT License
classifiers = 
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = SimproAPI
install_requires=
    requests>=2.24.0
    urllib3>=1.25.10